update icon pwa, cv, add robots and sitemap for seo

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       href="https://fonts.googleapis.com/css2?family=Sora&display=swap"
       rel="stylesheet"
     />
+    <meta
+      name="keywords"
+      content="Muhammad Dariaz Zidane, Dariaz Zidane, Dariaz, Zidane, Muhammad Dariaz, Dariaz Zidane Personal Website" />
+    <meta name="author" content="Muhammad Dariaz Zidane" />
   </head>
   <body class="scrollbar-hide">
     <div id="root"></div>
