modified : change meta content index

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/img/foto.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#4f46e5" />
-    <title>Muhammad Dariaz Zidane</title>
-    <meta name="application-name" content="Muhammad Dariaz Zidane" />
+    <title>Rama Fajar</title>
+    <meta name="application-name" content="Rama Fajar" />
     <meta name="email" content="dariazzidane@gmail.com" />
     <meta
       name="description"
-      content="Muhammad Dariaz Zidane Personal Website"
+      content="Rama Fajar Personal Website"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -20,8 +20,8 @@
     />
     <meta
       name="keywords"
-      content="Muhammad Dariaz Zidane, Dariaz Zidane, Dariaz, Zidane, Muhammad Dariaz, Dariaz Zidane Personal Website" />
-    <meta name="author" content="Muhammad Dariaz Zidane" />
+      content="Rama Fajar, Rama Fajar, Fajar, Rama, Fajar, Rama Fajar Personal Website" />
+    <meta name="author" content="Rama Fajar" />
   </head>
   <body class="scrollbar-hide">
     <div id="root"></div>
